<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_item"
        android:enabled="true"
        android:icon="@drawable/forma"
        android:title="@string/main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/categories_item"
        android:enabled="true"
        android:icon="@drawable/twobookscopy"
        android:title="@string/categories"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notifications_item"
        android:enabled="true"
        android:icon="@drawable/eartho"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_item"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>