<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    tools:context=".UI.ForgetPassword.ForgetPassword2Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/logocopy"
        android:contentDescription="@string/logo_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="bottom">

        <EditText
            android:id="@+id/ForgetPassword_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/accounto"
            android:hint="@string/code"
            android:inputType="number"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/ForgetPassword_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/lockicon"
            android:hint="@string/password"
            android:layout_below="@id/ForgetPassword_code"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/ForgetPassword_CPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/lockicon"
            android:hint="@string/confirm_password"
            android:layout_below="@id/ForgetPassword_pass"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/forget_finish_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/ForgetPassword_CPass"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/loginbtn"
            android:padding="@dimen/_15sdp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/finish"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="#fff" />
    </RelativeLayout>
</RelativeLayout>