<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    tools:context=".UI.Register.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/logocopy" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="bottom">

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/accounto"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:layout_below="@+id/register_name"
            android:id="@+id/register_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/mailicon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_mail"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/lockicon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/confirmed_register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_pass"
            android:background="@drawable/editbox_background"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/lockicon"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/confirmed_register_pass"
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/loginbtn"
            android:padding="@dimen/_15sdp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="#fff" />

    </RelativeLayout>
</RelativeLayout>