<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ForgetPassword.ForgetPasswordActivity"
    android:background="@drawable/group">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logocopy"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/logo" />
    <RelativeLayout
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <EditText
            android:id="@+id/ForgetPassword_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editbox_background"
            android:drawableStart="@drawable/mailicon"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/_5sdp"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields" />

            <Button
                android:id="@+id/forget_next_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@+id/ForgetPassword_mail"
                android:background="@drawable/loginbtn"
                android:padding="@dimen/_15sdp"
                android:textColor="#fff"
                android:shadowColor="@android:color/transparent"
                android:text="@string/next" />
    </RelativeLayout>
</RelativeLayout>