<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Main.Category_Fragment.Books.BooksActivity"
    android:background="@drawable/bground"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/white"
        android:padding="@dimen/_15sdp"
        android:textSize="@dimen/_25ssp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/Cat_name"
        android:textStyle="bold"
        android:text="test"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/dark_gray"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/sortType"
            android:textStyle="bold"
            android:text="@string/sort"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3sdp"
            android:textColor="@color/dark_gray"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/sortBy"
            android:text="@string/sort_by_levels"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:id="@+id/sort_popup"
            android:src="@drawable/icondisclosure"
            android:contentDescription="@string/sort_by" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/books_recyclerView"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_3sdp"
        android:layout_height="match_parent" />

</LinearLayout>